@@ -1,6 +1,8 @@
 CHANGES IN VERSION 3.3.3
 -------------------------
 
+- Add parameter 'missing' to diffreport allowing to replace NA with arbitrary
+  numbers.
 - Add exportMetaboAnalyst function to export the feature matrix in MetaboAnalyst
   format.
 - Add parameter missing to featureValues allowing to specify how to handle/
